[tool.poetry]
name = "nesiac"
version = "0.1.2"
description = "Memory usage visualiser for embedded applications"
authors = ["Eekle"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Eekle/Nesiac/"
keywords = ["embedded", "elf", "binary", "memory"]
classifiers = [
    "Topic :: Software Development :: Embedded Systems",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.6.0"
pyelftools = "^0.30"
cpp-demangle = "^0.1.2"
rust-demangler = "^1.0"
getchlib = "^1.0.12"

[tool.poetry.scripts]
nesiac = 'nesiac.cli:cli'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
